--- a/home/css/style.css
+++ b/home/css/style.css
@@ -1,16 +1,42 @@
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px){}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+
+@media screen and (max-width: 600px) {
+  }
+
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+}
+  
+}
 * {
     box-sizing: border-box;
   }
   
+
   body {
     font: 300 100% 'Roboto';
     background-color: black;
   }
   
-  .container {
-    width: 75%;
+  .topnav {
+    width: 100%;
     margin: 0 auto;
     height: 10%;
+    font-size: 20px;
   }
   
   ul li {
@@ -48,12 +74,89 @@
     transition: .3s ease-in-out;
   }
 
+  .crop-height {
+    /* max-width: 1200px; /* native or declared width of img src (if known) */
+    max-height: 500px;
+    overflow: hidden; }
+  
+  img.nagada {
+    /* corrects small inline gap at bottom of containing div */
+    display: block; 
+    width: 100%; /* corrects obscure Firefox bug */
+    max-width: 100%;
+    /* just in case, to force correct aspect ratio */
+    height: auto !important;
+    display: block; /* corrects small inline gap at bottom of containing div */
+    width: 100%; /* corrects obscure Firefox bug */
+    max-width: 100%;
+    /* just in case, to force correct aspect ratio */
+    height: auto !important;
+    /*width: auto\9; 
+    /* ie8+9 - use modernizr instead of this \9 hack */
+    /* lt ie8 */
+    -ms-interpolation-mode: bicubic;
+    /* optionally force a minimum size if img src size is known: */
+    /* min-height: 320px; /* max-height of .crop-height */
+    /* min-width: 480px; /* proportional to above */ }
+
+
+    
   .parallax { 
     /* The image used */
-    background-image: url("images/nagada")
+    background-image: url("https://pbp1995.github.io/sargam_site/images/nagada.jpg");
 
     /* Full height */
-    height: 100%; 
+    height: 512px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+} 
+  
+  hr {
+    height: .25rem;
+    width: 25%;
+    margin: 0;
+    background: #55C4C7;
+    border: none;
+    transition: .3s ease-in-out;
+  }
+
+  .crop-height {
+    /* max-width: 1200px; /* native or declared width of img src (if known) */
+    max-height: 500px;
+    overflow: hidden; }
+  
+  img.nagada {
+    /* corrects small inline gap at bottom of containing div */
+    display: block; 
+    width: 100%; /* corrects obscure Firefox bug */
+    max-width: 100%;
+    /* just in case, to force correct aspect ratio */
+    height: auto !important;
+    display: block; /* corrects small inline gap at bottom of containing div */
+    width: 100%; /* corrects obscure Firefox bug */
+    max-width: 100%;
+    /* just in case, to force correct aspect ratio */
+    height: auto !important;
+    /*width: auto\9; 
+    /* ie8+9 - use modernizr instead of this \9 hack */
+    /* lt ie8 */
+    -ms-interpolation-mode: bicubic;
+    /* optionally force a minimum size if img src size is known: */
+    /* min-height: 320px; /* max-height of .crop-height */
+    /* min-width: 480px; /* proportional to above */ }
+
+
+    
+  .parallax { 
+    /* The image used */
+    background-image: url("https://pbp1995.github.io/sargam_site/images/nagada.jpg");
+
+    /* Full height */
+    height: 512px; 
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
@@ -61,3 +164,62 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+  .row{
+    width: 100%;
+  }
+
+  .container{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+  }
+  .col-lg {
+    font-family: 'Raleway', sans-serif;
+    font-size: 30px;
+    text-align: center;
+    color: white; 
+    background-color: rgba(102, 102, 102, 0.856);
+    opacity: 0.99;
+    width: 100%;
+  }
+
+  h1 {
+    font-family: 'Rammetto One', cursive;
+    font-size: 70px;
+  }
+
+  .btn-1 {
+    position: absolute;
+    bottom: -50;
+    margin: 0;
+    background: linear-gradient(to bottom right, #0090AD, #1AB467);
+    width: 94%;
+    font-family: 'Raleway', sans-serif;
+    font-size: 25px;
+  }
+
+  .btn-1:hover {
+    box-shadow: 0 20px 26px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
+  .image container {
+    height: 70%;
+  }
+  
+  .title{
+    text-align: center;
+    color: white;
+    font-size: 30px;
+  }
+
+  .text{
+    text-align: center;
+    color: rgb(230, 221, 221);
+    font-size: 18px;
+    padding-top: 15px;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
