--- a/home/css/style.css
+++ b/home/css/style.css
@@ -153,7 +153,7 @@
     
   .parallax1 { 
     /* The image used */
-    background-image: url("https://pbp1995.github.io/sargam_site/images/6141473_orig.jpg");
+    background-image: url("https://pbp1995.github.io/sargam_site/images/blurred2.webp");
 
     /* Full height */
     height: 512px; 
