--- a/home/css/style.css
+++ b/home/css/style.css
@@ -166,7 +166,7 @@
 
 .parallax2 { 
   /* The image used */
-  background-image: url("https://pbp1995.github.io/sargam_site/images/raas_picture.jpg");
+  background-image: url("https://pbp1995.github.io/sargam_site/images/tix.webp");
 
   /* Full height */
   height: 512px; 
