--- a/home/css/style.css
+++ b/home/css/style.css
@@ -241,6 +241,27 @@
     font-size: 30px;
     padding-top: 15px;
     padding-left: 10%;
-    padding-right: 10%;
-    
+    padding-right: 10%;  
+  }
+
+  .fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px 2px;
+  }
+  
+  .fa:hover {
+      opacity: 0.7;
+  }
+  
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+
+  .footer{
+    background: black; 
   }
